--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,9 @@
 name: build and deploy to docker hub
 
 on:
-  release:
-    types:
-      - published
+  push:
+    branches:
+      - main
 
 jobs:
   base-image:
@@ -25,11 +25,9 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: true
           file: Dockerfile.ubuntu
-          tags:
-            - firejox/omnetpp-dock:ubuntu-base-${{ github.event.release.tag_name }}
-            - firejox/omnetpp-dock:base
+          push: true
+          tags: firejox/omnetpp-dock:base
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
@@ -53,13 +51,37 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: true
+          build-args: from=firejox/omnetpp-dock:base
           file: Dockerfile.omnetpp
-          build-args: from=firejox/omnetpp-dock:ubuntu-${{ github.event.release.tag_name }}
-          tags:
-            - firejox/omnetpp-dock:ubuntu-${{ github.event.release.tag_name }}
-            - firejox/omnetpp-dock:ubuntu-latest
-            - firejox/omnetpp-dock:latest
+          push: true
+          tags: firejox/omnetpp-dock:latest
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+  xpra-image:
+    needs: omnetpp-image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Dokcer Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push Image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          build-args: from=firejox/omnetpp-dock:latest
+          file: Dockerfile.xpra
+          push: true
+          tags: firejox/omnetpp-dock:xpra
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
